Bug 102050 - commit b4f639d02a causes build breakage on Android 32bit builds
Summary: commit b4f639d02a causes build breakage on Android 32bit builds
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-05 15:53 UTC by Mauro Rossi
Modified: 2017-08-12 08:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Mauro Rossi 2017-08-05 15:53:29 UTC
Hi,

could you please check commit b4f639d02a
"i965: Prefer using streaming reads from WC mmaps" ?

It causes the following building error with android 32 bit builds:

external/mesa/src/mesa/drivers/dri/i965/intel_buffer_objects.c:345: error: undefined reference to '_mesa_streaming_load_memcpy'

32bit builds on android do not use sse41 and if I understood correctly the issue
some guards should be used as current build uses -msse2 and main/streaming-load-memcpy.{c,h} rely on sse41 intrinsics.

Infact in Android build there is a library module called libmesa_sse41 which is used conditionally, when ARCH_X86_HAVE_SSE4_1 is true [not true for 32bit builds]

Please advise on how to fix android 32bit builds.
Thanks 

Mauro Rossi
android-x86 team
Comment 1 Tapani Pälli 2017-08-10 09:05:15 UTC
This one I haven't seen happening on Android-IA, we use O3 for compilation but I don't think it makes difference with this case (?)
Comment 2 Tapani Pälli 2017-08-11 06:42:53 UTC
Mauro, what kind of machine is your build target? ACH_X86_HAVE_SSE4_1 is defined both for x86 and x86_64 even for quite old cores?
Comment 3 Mauro Rossi 2017-08-11 08:06:21 UTC
Hi Tapani,

The target machine not featuring ARCH_X86_HAVE_SSE4_1 in 32bit builds are the x86.mk generic and atom.mk

I'm going to check Kenneth's patch [1] and report back to close the issue.
M.

[1] https://lists.freedesktop.org/archives/mesa-dev/2017-August/166105.html
Comment 4 Kenneth Graunke 2017-08-12 08:46:53 UTC
Should be fixed by:

commit 22e1d8832c90702b4cd972e48f0db809f7c7639f
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Thu Aug 10 21:10:31 2017 -0700

    i965: Guard GetBufferSubData's streaming memcpy load with USE_SSE41


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.